app/assets/v2/css/kudos/styles.css
/* ... */
.hexagon-group svg {
  height: 16.8em;
  width: 14.4em; }
.hexagon-group svg text {
  font-size: 1.1em; }
.hexagon-group .paging-animation {
  font-size: 14px;
  margin: 0.8em;
  margin-bottom: -3em;
  perspective: 1000px;
  position: relative;
  height: 208px; }
.hexagon-group .paging-animation .faces {
  transform-style: preserve-3d;
  transition: all 0.5s linear;
  width: 100%;
  height: 100%; }
.hexagon-group .paging-animation .face {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden; }
.hexagon-group .paging-animation .back {
  display: block;
  transform: rotateY(0.5turn);
  box-sizing: border-box; }
.hexagon-group .paging-animation:hover .faces {
  transform: rotateY(0.5turn); }
.hexagon-group .paging-animation:nth-child(1) {
  color: #FF7200;
  grid-column: 1/4; }
.hexagon-group .paging-animation:nth-child(2) {
  color: #F9006C;
  grid-column: 2/5; }
.hexagon-group .paging-animation:nth-child(3) {
  color: #3E00FF;
  grid-column: 1/4; }
.hexagon-group .paging-animation:nth-child(4) {
  color: #0ECF7C;
  grid-column: 2/5; }
.hexagon-group .paging-animation:nth-child(5) {
  color: #7ED321;
  grid-column: 1/4; }
.hexagon-group .paging-animation:nth-child(6) {
  color: #8E2ABE;
  grid-column: 2/5; }
.hexagon-group .paging-animation:nth-child(7) {
  color: #43D0B0;
  grid-column: 1/4; }
@media (min-width: 400px) {
  .hexagon-group svg text {
    font-size: 1.3em; }
  .hexagon-group .paging-animation {
    height: 260px;
    font-size: 16px; }
  .hexagon-group .paging-animation:nth-child(1) {
    grid-column: 1/3; }
  .hexagon-group .paging-animation:nth-child(2) {
    grid-column: 2/4; }
  .hexagon-group .paging-animation:nth-child(3) {
    grid-column: 1/3; }
  .hexagon-group .paging-animation:nth-child(4) {
    grid-column: 3/5; }
  .hexagon-group .paging-animation:nth-child(5) {
    grid-column: 2/4; }
  .hexagon-group .paging-animation:nth-child(6) {
    grid-column: 1/3; }
  .hexagon-group .paging-animation:nth-child(7) {
    grid-column: 3/5; } }
@media (min-width: 800px) {
  .hexagon-group {
    grid-template-columns: repeat(8, 1fr); }
  .hexagon-group .paging-animation:nth-child(1) {
    grid-column: 1/3; }
  .hexagon-group .paging-animation:nth-child(2) {
    grid-column: 3/5; }
  .hexagon-group .paging-animation:nth-child(3) {
    grid-column: 5/7; }
  .hexagon-group .paging-animation:nth-child(4) {
    grid-column: 7/9; }
  .hexagon-group .paging-animation:nth-child(5) {
    grid-column: 2/4; }
  .hexagon-group .paging-animation:nth-child(6) {
    grid-column: 4/6; }
  .hexagon-group .paging-animation:nth-child(7) {
    grid-column: 6/8; } }

.star-pulse {
  animation: pulse-shadow .5s ease-out infinite;
  animation-direction: alternate;
  margin-left: -60px;
  margin-top: 4rem;
  top: 0; }
@media (max-width: 768px) {
  .star-pulse {
    right: -10px;
    margin-top: 0;
    width: 5rem; } }

@keyframes pulse-shadow {
  0% {
    transform: scale(0.98);
    filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.9)); }
  100% {
    transform: scale(1);
    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.5)); } }
.bg-hexa {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cg stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' opacity='0.187946429'%3E%3Cg transform='translate(-227.000000, -1170.000000)' stroke='%233E00FF' stroke-width='10'%3E%3Cg id='Group-5-Copy-7' transform='translate(294.737804, 1248.626588) rotate(-330.000000) translate(-294.737804, -1248.626588) translate(223.737804, 1186.126588)'%3E%3Cpolygon opacity='0.334877232' points='105.943991 0 35.3139974 0 9.09494702e-13 62.3980694 35.3139974 124.7941 105.943991 124.7941 141.259988 62.3980694'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  background-position: 2rem 2rem;
  background-repeat: no-repeat; }

.text-featured {
  font-size: 1.7rem; }

.badge-kudos {
  background-color: #D8EAFF;
  color: #4A4A4A;
  border-radius: 2px;
  text-decoration: none; }

#world {
  z-index: -1; }

a.cellarius-partner:before {
  content: '';
  position: absolute;
  right: 1rem;
  bottom: 3rem;
  width: 16%;
  height: 16%;
  background-size: cover;
  background: url("/static/v2/images/kudos/assets/cellarius-logo.svg");
  background-repeat: no-repeat; }

.cellarius-badge {
  right: 1rem;
  bottom: 3rem;
  width: 16%;
  height: 16%;
  background-size: cover;
  background: url("/static/v2/images/kudos/assets/cellarius-logo.svg");
  background-repeat: no-repeat;
  background-color: #fff;
  border-radius: 50px; }

.kudos-details__title {
  font-weight: 200;
  font-size: 3.2rem;
  margin-bottom: 0; }

.kudos-details__subtitle {
  font-size: 1rem;
  font-weight: 700;
  color: #0D0764;
  border-bottom: 1px solid #C8C8C8;
  padding-bottom: 0.8rem;
  margin-bottom: 1rem; }
.kudos-details__subtitle img {
  position: relative;
  top: -2px; }

.kudos-details__price {
  font-size: 1.5rem;
  font-weight: 700; }
.kudos-details__price small {
  font-size: 1.25rem;
  font-weight: 600;
  color: #4A4A4A; }

.kudos-details__address {
  color: #3E00FF; }

.text-color_blue {
  color: #0D0764; }

.text-weight_semibold {
  font-weight: 600; }

.tooltip-kudos .title-tooltip {
  text-align: left;
  display: block;
  font-size: 14px;
  color: #0ECF7C;
  font-weight: 600;
  line-height: 1.5; }
.tooltip-kudos .tooltip-inner {
  width: 300px;
  background-color: #0D0764;
  font-size: 12px;
  padding: 1rem;
  max-width: 240px; }
.tooltip-kudos .tooltip-inner table {
  width: 100%; }

.author-shape {
  -webkit-clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); }

#kudos-image, .kudos_levitate_container {
  cursor: pointer; }

#kudos-image.shake {
  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  perspective: 1000px; }
/* ... */

